report_engine: remove printable functionality from offered_insurance
fix #808:'Remove printable functionality from offered_insurance and create a new printing module'
http://rietveld.coopengo.com/3780001

--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -990,7 +990,7 @@ msgctxt "selection:contract.service,status:"
 msgid "Not Eligible"
 msgstr "Non Eligible"
 
-msgctxt "selection:document.template,kind:"
+msgctxt "selection:report.template,kind:"
 msgid "Contract Documents"
 msgstr "Documents du contrat"
 
