contract_insurance_payment: allow to define payment journal per product Fix #1242 : https://redmine.coopengo.com/issues/1242 http://rietveld.coopengo.com/10110002

--- a/modules/contract_insurance_payment/locale/fr_FR.po
+++ b/modules/contract_insurance_payment/locale/fr_FR.po
@@ -1,7 +1,15 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:account.payment.journal,failure_billing_mode:"
 msgid "Failure Billing Mode"
 msgstr "Mode de quittancement en cas d'échec"
+
+msgctxt "field:offered.product,payment_journal:"
+msgid "Payment Journal"
+msgstr "Journal de prélèvement"
+
+msgctxt "help:offered.product,payment_journal:"
+msgid "If no journal defined the global configuration will be used"
+msgstr "Si aucun journal n'est défini, la configuration gloable sera utilisée"
