account_payment_cog: Improve reject payment management Fix #1549: https://redmine.coopengo.com/issues/1549 http://rietveld.coopengo.com/11170002

--- a/modules/account_payment_cog/CHANGELOG
+++ b/modules/account_payment_cog/CHANGELOG
@@ -1,3 +1,5 @@
+* Manage manual reject payment processus
+* Allow to configure payment fail action accoding number of retry
 * Allow to block payments for a party
 * Add payable payment creation through batch
 
