--- a/modules/contract_insurance_payment/CHANGELOG
+++ b/modules/contract_insurance_payment/CHANGELOG
@@ -1,3 +1,4 @@
+* Allow to configure failure billing mode by billing mode
 * Allow to configure payment journal per product
 
 Version 1.3 - 2015-01-22
