account_payment_cog:Use outstanding receivable/payable amount to reduce payment Fix #1652 #1608: https://redmine.coopengo.com/issues/1652 http://rietveld.coopengo.com/13010001

--- a/modules/account_payment_cog/CHANGELOG
+++ b/modules/account_payment_cog/CHANGELOG
@@ -1,3 +1,4 @@
+* Add payments creation wizard
 * Manage manual reject payment processus
 * Allow to configure payment fail action accoding number of retry
 * Allow to block payments for a party
